<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="download_activity_label">Downloader</string>
    <string name="send_intent_label">Open with Link Bubble</string>
    <string name="notification_summary">Touch to hide all open bubbles</string>
    <string name="notification_default_summary">Touch to Hide, expand to Close All</string>
    <string name="notification_unhide_summary">Touch to Unhide, expand to Close All</string>
    <string name="notification_action_close_all">Close All</string>
    <string name="notification_action_hide">Hide</string>
    <string name="share_picker_label">Share picker</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_open">Open</string>
    <string name="action_remove">Remove</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_clear_data">Clear data</string>
    <string name="action_use_default">Use default</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_reload_page">Reload</string>
    <string name="action_open_in_browser">Open in %1$s</string>
    <string name="action_request_desktop_site">Request desktop site</string>
    <string name="action_open_in_new_bubble">Open in new bubble</string>
    <string name="action_open_link_in_new_bubble">Open link in new bubble</string>
    <string name="action_open_image_in_new_bubble">Open image in new bubble</string>
    <string name="action_copy_to_clipboard">Copy link</string>
    <string name="action_save_image">Save image</string>
    <string name="action_share">Share</string>
    <string name="action_close_all">Close all</string>
    <string name="action_close_tab">Close bubble</string>
    <string name="action_stop">Stop</string>
    <string name="action_undo">Undo</string>
    <string name="action_add">Add</string>
    <string name="action_no_recommended">No (recommended)</string>
    <string name="share_via">Share via…</string>
    <string name="not_set">Not set</string>
    <string name="error_saving_image">Error saving image.</string>
    <string name="image_saved">Image downloaded.</string>
    <string name="notice_download_started">Download started.</string>
    <string name="warning">Warning!</string>
    <string name="untrusted_certificate">The certificate at %1$s is not trusted. Proceed anyway?</string>
    <string name="share_invalid_data">Link Bubble us unable to share this item as it is not a valid URL.</string>
    <string name="consume_activity_not_found">Unable to find application. Consider changing bubble action via Settings.</string>
    <string name="consume_activity_security_exception">Unable to share to external application.</string>
    <string name="upgrade">Upgrade</string>
    <string name="upgrade_theme">Want to use a different theme?</string>
    <string name="upgrade_theme_toolbar">Want to theme the toolbar to match the theme color of websites?</string>
    <string name="undo_close_tab_title">Closed %1$s</string>
    <string name="undo_close_tab_no_title">Closed tab</string>
    <string name="pick_default_app">Select default app</string>
    <string name="default_browser_set">Link Bubble has been set as the default browser.</string>
    <string name="invalid_send_action">Valid link not found.</string>
    <string name="unable_to_launch_app">Unable to launch 3rd party application.</string>
    <string name="clear_history">Clear history</string>
    <string name="preference_category_general">General</string>
    <string name="preference_category_configuration">App Controls</string>
    <string name="preference_category_configuration2">Configuration</string>
    <string name="preference_category_browser">Browser</string>
    <string name="preference_enabled_title">Enabled</string>
    <string name="preference_auto_content_display_link_loaded_title">Auto expand</string>
    <string name="preference_auto_content_display_link_loaded_summary">When any bubble has finished loading</string>
    <string name="preference_left_consume_bubble_title">Left bubble</string>
    <string name="preference_right_consume_bubble_title">Right bubble</string>
    <string name="preference_double_tap_title">Link double tap</string>
    <string name="preference_configure_bubble_title">Configure bubble</string>
    <string name="preference_category_debug">Debug</string>
    <string name="preference_default_browser">Default fallback browser</string>
    <string name="preference_category_redirect_to_browser">Redirect to fallback browser</string>
    <string name="preference_category_fallback_browser">Default fallback browser</string>
    <string name="preference_category_other_apps">Other apps</string>
    <string name="preference_default_apps_title">Default apps</string>
    <string name="preference_default_apps_summary">Fallback browser, url-specific apps</string>
    <string name="preference_default_apps_notice_summary">Used when one or more non-browser apps on your system can handle a
                    URL.\n\nTap to remove a default.</string>
    <string name="preference_default_apps_notice_no_defaults_summary">Used when one or more non-browser apps on your device can handle a URL,
                you can configure the default app to load such links with.\n\nThe default app to use in this case is configured as
                you load links with Link Bubble.</string>
    <string name="preference_google_account_redirect_title">Google Account redirect</string>
    <string name="preference_google_account_redirect_summary">Redirect accounts.google.com links to default fallback browser</string>
    <string name="preference_set_default_browser_title">Set default system browser</string>
    <string name="preference_set_default_browser_summary">Link Bubble must be the default system browser to work. Tap to configure.</string>
    <string name="preference_more">More…</string>
    <string name="preference_intercept_links_from_title">Intercept links from</string>
    <string name="preference_intercept_links_from_disabled_for_L">As of Android 5.0, Google have removed the API required for this functionality.</string>
    <string name="preference_scan_for_youtube_embeds_title">Check for YouTube embeds</string>
    <string name="preference_scan_for_youtube_embeds_summary">Display shortcut to load embedded video(s) in the YouTube app.</string>
    <string name="preference_webview_battery_save_title">Battery Save Mode (Beta)</string>
    <string name="preference_webview_battery_save_aggressive_title">Aggressive</string>
    <string name="preference_webview_battery_save_aggressive_summary">Pause the updating of web pages when Link Bubble is minimized.\nPages in the process of loading will finish loading before pausing.</string>
    <string name="preference_webview_battery_save_default_title">Default</string>
    <string name="preference_webview_battery_save_default_summary">Pause the updating of web pages when the screen is off and resume when your device is unlocked.\nPages in the process of loading will finish loading before pausing.</string>
    <string name="preference_webview_battery_save_off_title">Off</string>
    <string name="preference_webview_battery_save_off_summary">Web pages are always active. Useful when streaming YouTube videos and the like.</string>
    <string name="preference_theme_title">Theme</string>
    <string name="preference_theme_light_color">Light + icon color</string>
    <string name="preference_theme_light_no_color">Light + neutral color</string>
    <string name="preference_theme_dark_color">Dark + icon color</string>
    <string name="preference_theme_dark_no_color">Dark + neutral color</string>
    <string name="preference_theme_toolbar_title">Color toolbar</string>
    <string name="preference_theme_toolbar_summary">To match a website\'s theme color/icon highlight color.</string>
    <string name="preference_article_mode_title">Reading Mode</string>
    <string name="preference_reading_mode_on_wear_title">Reading Mode on Wear</string>
    <string name="preference_article_mode_summary">Toggled via button on action bar</string>
    <string name="preference_webview_text_zoom_title">Text zoom</string>
    <string name="preference_webview_text_zoom_note">Note: Current bubbles will be reloaded with the new text zoom applied after selecting \"OK\".</string>
    <string name="preference_webview_text_zoom_reloading_current">New text zoom level applied. Reloading current bubbles…</string>
    <string name="preference_clear_browser_cache_title">Clear private data</string>
    <string name="preference_clear_cache">Cache</string>
    <string name="preference_clear_cookies">Cookies</string>
    <string name="preference_clear_favicons">Favicons</string>
    <string name="preference_clear_form_data">Form data</string>
    <string name="preference_clear_history">History</string>
    <string name="preference_clear_passwords">Passwords</string>
    <string name="preference_incognito_title">Incognito Mode</string>
    <string name="preference_incognito_summary">Prevent storing all history and cookies</string>
    <string name="incognito_mode_changed_reloading_current">Incognito setting changed. Reloading current bubbles…</string>
    <string name="preference_user_agent_title">User Agent</string>
    <string-array name="preference_user_agent_options">
        <item>Default</item>
        <item>Chrome Phone</item>
        <item>Chrome Tablet</item>
        <item>Chrome Desktop</item>
    </string-array>
    <string name="preference_domains_title">Domain redirects</string>
    <string name="preference_domains_summary">Specify links to always load in your fallback browser.</string>
    <string name="preference_redirects_title">Redirect to fallback browser</string>
    <string name="preference_add_domain_title">Add domain</string>
    <string name="add_domain_hint">Url host</string>
    <string name="add_domain_detail">Specify only the \'main\' portion of a website address. E.g.,
        \"accounts.google.com\" or \"bbc.co.uk\".</string>
    <string name="add_domain_error">Unable to add \"%1$s\", as it is not a valid URL host.</string>
    <string name="preference_help_title">Help</string>
    <string name="preference_show_welcome_message_title">Show welcome page</string>
    <string name="preference_credits_title">Credits</string>
    <string name="preference_osl_title">Open source licenses</string>
    <string name="preference_privacy_policy_title">Privacy Policy</string>
    <string name="preference_terms_of_service_title">Terms of Service</string>
    <string name="preference_say_thanks_title">Say thanks!</string>
    <string name="preference_say_thanks_summary">Enjoying Link Bubble? Please consider leaving a Play Store review.</string>
    <string name="preference_version_title">Version</string>
    <string name="preference_version_summary">What\'s new?</string>
    <string name="preference_more_title">More&#8230;</string>
    <string name="preference_show_undo_close_tab_title">Undo close tab prompt</string>
    <string name="preference_my_other_apps_title">More apps by Link Bubble</string>
    <string name="preference_my_other_apps_summary">Like Link Bubble? Why not check out our other apps?</string>
    <string name="remove_default_title">Remove default?</string>
    <string name="faq_title">FAQ</string>
    <string name="preference_faq_summary">Question about the app? Try here.</string>
    <string name="credits_name">Link Bubble</string>
    <string name="credits_credit">Concept, design and programming</string>
    <string name="credits_app_copyright">Copyright 2015, Link Bubble.</string>
</resources>