<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/preference_category_configuration"
        android:key="preference_category_configuration">

        <!--
        <SwitchPreference
            android:key="preference_enabled"
            android:title="@string/preference_enabled_title"
            android:defaultValue="true" />-->

        <Preference
            android:key="preference_set_default_browser"
            android:title="@string/preference_set_default_browser_title"
            android:summary="@string/preference_set_default_browser_summary"/>

        <!--
        -->
        <PreferenceScreen
            android:key="preference_default_apps"
            android:title="@string/preference_default_apps_title"
             >

            <Preference
                android:title="@string/preference_category_fallback_browser"
                android:key="preference_default_browser"
                />

            <CheckBoxPreference
                android:key="preference_google_accounts_redirect"
                android:title="@string/preference_google_account_redirect_title"
                android:summary="@string/preference_google_account_redirect_summary"
                android:defaultValue="true"
                android:icon="@drawable/ic_google_account"/>

            <PreferenceCategory
                android:key="preference_category_other_apps"
                android:title="@string/preference_category_other_apps" >

                <Preference
                    android:key="preference_default_apps_notice"
                    android:summary="@string/preference_default_apps_notice_summary"
                    />

            </PreferenceCategory>

        </PreferenceScreen>

        <Preference
            android:key="preference_left_consume_bubble"
            android:title="@string/preference_left_consume_bubble_title"
            />
        <Preference
            android:key="preference_right_consume_bubble"
            android:title="@string/preference_right_consume_bubble_title"
            />

        <Preference
            android:key="preference_ignore_links_from"
            android:title="@string/preference_intercept_links_from_title"
            />

        <PreferenceScreen
            android:key="preference_more"
            android:title="@string/preference_more_title"
            >

            <CheckBoxPreference
                android:key="preference_ok_google"
                android:title="@string/preference_ok_google_title"
                android:summary="@string/preference_ok_google_summary"
                android:defaultValue="false"
                />

            <CheckBoxPreference
                android:key="preference_article_mode"
                android:title="@string/preference_article_mode_title"
                android:summary="@string/preference_article_mode_summary"
                android:defaultValue="false"
                />

            <CheckBoxPreference
                android:key="preference_show_undo_close_tab_prompt"
                android:title="@string/preference_show_undo_close_tab_title"
                android:defaultValue="true"
                />

            <CheckBoxPreference
                android:key="preference_auto_content_display_link_loaded"
                android:title="@string/preference_auto_content_display_link_loaded_title"
                android:summary="@string/preference_auto_content_display_link_loaded_summary"
                />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_browser">

        <!--
        <PreferenceScreen
            android:title="@string/preference_article_mode_title"> -->

        <!--
            <CheckBoxPreference
                android:key="preference_auto_article_mode"
                android:title="@string/preference_auto_article_mode_title"
                android:summary="@string/preference_auto_article_mode_summary"
                android:defaultValue="false"
                /> -->

        <!--
        </PreferenceScreen> -->

        <Preference
            android:title="@string/preference_webview_text_zoom_title"
            android:key="preference_webview_text_zoom">
        </Preference>

        <ListPreference
            android:key="preference_user_agent"
            android:title="@string/preference_user_agent_title"
            android:entries="@array/preference_user_agent_options"
            android:entryValues="@array/preference_user_agent_values"
            android:dialogTitle="@string/preference_user_agent_title"
            android:defaultValue="default"
            />

        <CheckBoxPreference
            android:key="preference_incognito"
            android:title="@string/preference_incognito_title"
            android:summary="@string/preference_incognito_summary"
            android:defaultValue="false"
            />

        <Preference
            android:key="preference_clear_browser_cache"
            android:title="@string/preference_clear_browser_cache_title"/>

        <!--
        <PreferenceScreen
            android:key="preference_more"
            android:title="@string/preference_more"
            android:dependency="preference_enabled"
            >

            <CheckBoxPreference
                android:key="preference_scan_for_youtube_embeds"
                android:title="@string/preference_scan_for_youtube_embeds_title"
                android:summary="@string/preference_scan_for_youtube_embeds_summary"
                android:defaultValue="true"
                />

            <PreferenceScreen
                android:key="preference_category_debug"
                android:title="@string/preference_category_debug">

                <CheckBoxPreference
                    android:key="auto_load_url"
                    android:title="Auto load URL"
                    android:summary="Load abc.net.au on app boot"
                    android:defaultValue="false"/>

                <CheckBoxPreference
                    android:key="debug_flick"
                    android:summary="Flick targets show message when hit only."
                    android:title="Flick Targets"
                    android:defaultValue="false" />

                <Preference
                    android:key="debug_crash"
                    android:summary="CRASH THE APP (TEST RECOVERY)."
                    android:title="Crash!"/>

            </PreferenceScreen>

        </PreferenceScreen>
        -->

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_general"
        android:key="preference_category_general"
        >

        <Preference
            android:key="preference_say_thanks"
            android:title="@string/preference_say_thanks_title"
            android:summary="@string/preference_say_thanks_summary" />

        <Preference
            android:key="preference_get_pro"
            android:title="@string/preference_get_pro_title"
            android:summary="@string/preference_get_pro_summary" />

        <PreferenceScreen
            android:key="preference_screen_help"
            android:title="@string/preference_help_title"
            >

            <Preference
                android:key="preference_show_welcome_message"
                android:title="@string/preference_show_welcome_message_title"/>

            <Preference
                android:key="preference_credits"
                android:title="@string/preference_credits_title"/>

            <Preference
                android:key="preference_osl"
                android:title="@string/preference_osl_title"/>

            <Preference
                android:key="preference_privacy_policy"
                android:title="@string/preference_privacy_policy_title"/>

            <Preference
                android:key="preference_terms_of_service"
                android:title="@string/preference_terms_of_service_title"/>

        </PreferenceScreen>

        <Preference
            android:key="preference_faq"
            android:title="@string/faq_title"
            android:summary="@string/preference_faq_summary">
        </Preference>

        <Preference
            android:key="preference_my_other_apps"
            android:title="@string/preference_my_other_apps_title"
            android:summary="@string/preference_my_other_apps_summary" />

        <Preference
            android:key="preference_version"
            android:title="@string/preference_version_title"
            android:summary="@string/preference_version_summary"
             />

    </PreferenceCategory>

</PreferenceScreen>
