<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_help_root">

    <Preference
        android:key="preference_show_welcome_message"
        android:title="@string/preference_show_welcome_message_title"/>

    <Preference
        android:key="preference_credits"
        android:title="@string/preference_credits_title"/>

    <Preference
        android:key="preference_osl"
        android:title="@string/preference_osl_title"/>

    <Preference
        android:key="preference_privacy_policy"
        android:title="@string/preference_privacy_policy_title"/>

    <Preference
        android:key="preference_terms_of_service"
        android:title="@string/preference_terms_of_service_title"/>

    <Preference
        android:key="preference_say_thanks"
        android:title="@string/preference_say_thanks_title"
        android:summary="@string/preference_say_thanks_summary" />

</PreferenceScreen>
