<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_more_root">


    <CheckBoxPreference
        android:key="preference_article_mode"
        android:title="@string/preference_article_mode_title"
        android:summary="@string/preference_article_mode_summary"
        android:defaultValue="true"
        />

    <CheckBoxPreference
        android:key="preference_reading_mode_on_wear"
        android:title="@string/preference_reading_mode_on_wear_title"/>

    <CheckBoxPreference
        android:key="preference_ok_google"
        android:title="@string/preference_ok_google_title"
        android:summary="@string/preference_ok_google_summary_long"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="preference_show_undo_close_tab_prompt"
        android:title="@string/preference_show_undo_close_tab_title"
        android:defaultValue="true"
        />

    <CheckBoxPreference
        android:key="preference_auto_content_display_link_loaded"
        android:title="@string/preference_auto_content_display_link_loaded_title"
        android:summary="@string/preference_auto_content_display_link_loaded_summary"
        />

    <Preference
        android:key="preference_ignore_links_from"
        android:title="@string/preference_intercept_links_from_title"
        android:summary="@string/preference_intercept_links_from_disabled_for_L"
        android:enabled="false"
        />

</PreferenceScreen>
