<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout 
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_name"
                android:textSize="18sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_credit"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp"/>

        </LinearLayout>

	</LinearLayout>

    <!--
     <TextView
        android:id="@+id/credits_art_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:text="@string/credits_art_items"
        android:textSize="17dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
        -->
    
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:text="@string/credits_app_copyright"
        android:textSize="17sp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
     <!-- 
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Preview build for @JM77."
        android:paddingTop="14dp"
        android:textSize="17dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
        
         -->
    
</LinearLayout>
</ScrollView>